<resources>
    <string name="app_name">Covid19_statistics</string>

    <string name="name_covid">COVID - 19</string>
    <string name="name_stat">s t a t i s t i c s</string>

    <string name="name_doctor">Будьте  здоровы!</string>

    <string name="buttonOne_text"><font size="20">Total stats</font>\n\<font size="10">Общие данные</font></string>
    <string name="buttonTwo_text"><font size="20">New cases in Russia</font>\n\<font size="10">Новые случаи в России</font></string>
    <string name="buttonThree_text"><font size="20">Total in Russia</font>\n\<font size="10">Общее колличество в России</font></string>
    <string name="buttonFour_text"><font size="20">Total in USA</font>\n\<font size="10">Общее колличество в США</font></string>

    <string name="new_confirmed_template">New confirmed: %d</string>
    <string name="new_deaths_template">New deaths: %d</string>
    <string name="new_recovered_template">New recovered: %d</string>
    <string name="total_confirmed_template">Total confirmed: %d</string>

    <string name="all_confirmed_template">Confirmed: %d</string>
    <string name="all_deaths_template">Deaths: %d</string>
    <string name="all_recovered_template">Recovered: %d</string>
    <string name="total_deaths_template">Total deaths: %d</string>
    <string name="total_recovered_template">Total recovered: %d</string>


</resources>
